--- a/navi_multi_goals_pub_rviz_plugin/package.xml
+++ b/navi_multi_goals_pub_rviz_plugin/package.xml
@@ -1,48 +1,50 @@
-<package>
-<name>navi_multi_goals_pub_rviz_plugin</name>
-<version>0.0.0</version>
-<description>The navi_multi_goals_pub_rviz_plugin package</description>
-<!--  One maintainer tag required, multiple allowed, one person per tag  -->
-<!--  Example:   -->
-<!--  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>  -->
-<maintainer email="ryoo@todo.todo">ryoo</maintainer>
-<!--  One license tag required, multiple allowed, one license per tag  -->
-<!--  Commonly used license strings:  -->
-<!--    BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3  -->
-<license>TODO</license>
-<!--  Url tags are optional, but mutiple are allowed, one per tag  -->
-<!--  Optional attribute type can be: website, bugtracker, or repository  -->
-<!--  Example:  -->
-<!--  <url type="website">http://wiki.ros.org/navi_multi_goals_pub_rviz_plugin</url>  -->
-<!--  Author tags are optional, mutiple are allowed, one per tag  -->
-<!--  Authors do not have to be maintianers, but could be  -->
-<!--  Example:  -->
-<!--  <author email="jane.doe@example.com">Jane Doe</author>  -->
-<!--  The *_depend tags are used to specify dependencies  -->
-<!--  Dependencies can be catkin packages or system dependencies  -->
-<!--  Examples:  -->
-<!--  Use build_depend for packages you need at compile time:  -->
-<!--    <build_depend>message_generation</build_depend>  -->
-<!--  Use buildtool_depend for build tool packages:  -->
-<!--    <buildtool_depend>catkin</buildtool_depend>  -->
-<!--  Use run_depend for packages you need at runtime:  -->
-<!--    <run_depend>message_runtime</run_depend>  -->
-<!--  Use test_depend for packages you need only for testing:  -->
-<!--    <test_depend>gtest</test_depend>  -->
-<buildtool_depend>catkin</buildtool_depend>
-<build_depend>roscpp</build_depend>
-<build_depend>geometry_msgs</build_depend>
-<build_depend>actionlib_msgs</build_depend>
-<build_depend>rviz</build_depend>
-<build_depend>std_msgs</build_depend>
-<build_depend>message_generation</build_depend>
-<run_depend>roscpp</run_depend>
-<run_depend>rviz</run_depend>
-<run_depend>std_msgs</run_depend>
-<run_depend>geometry_msgs</run_depend>
-<run_depend>message_runtime</run_depend>
-<run_depend>actionlib_msgs</run_depend>
-<export>
-<rviz plugin="${prefix}/plugin_description.xml"/>
-</export>
+<?xml version="1.0"?>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
+  <name>navi_multi_goals_pub_rviz_plugin</name>
+  <version>1.0.7</version>
+  <description>The navi_multi_goals_pub_rviz_plugin package</description>
+  <!--  One maintainer tag required, multiple allowed, one person per tag  -->
+  <!--  Example:   -->
+  <!--  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>  -->
+  <maintainer email="ryoo@todo.todo">ryoo</maintainer>
+  <!--  One license tag required, multiple allowed, one license per tag  -->
+  <!--  Commonly used license strings:  -->
+  <!--    BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3  -->
+  <license>TODO</license>
+  <!--  Url tags are optional, but mutiple are allowed, one per tag  -->
+  <!--  Optional attribute type can be: website, bugtracker, or repository  -->
+  <!--  Example:  -->
+  <!--  <url type="website">http://wiki.ros.org/navi_multi_goals_pub_rviz_plugin</url>  -->
+  <!--  Author tags are optional, mutiple are allowed, one per tag  -->
+  <!--  Authors do not have to be maintianers, but could be  -->
+  <!--  Example:  -->
+  <!--  <author email="jane.doe@example.com">Jane Doe</author>  -->
+  <!--  The *_depend tags are used to specify dependencies  -->
+  <!--  Dependencies can be catkin packages or system dependencies  -->
+  <!--  Examples:  -->
+  <!--  Use build_depend for packages you need at compile time:  -->
+  <!--    <build_depend>message_generation</build_depend>  -->
+  <!--  Use buildtool_depend for build tool packages:  -->
+  <!--    <buildtool_depend>catkin</buildtool_depend>  -->
+  <!--  Use run_depend for packages you need at runtime:  -->
+  <!--    <run_depend>message_runtime</run_depend>  -->
+  <!--  Use test_depend for packages you need only for testing:  -->
+  <!--    <test_depend>gtest</test_depend>  -->
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <build_depend>qtbase5-dev</build_depend>
+  <depend>rclcpp</depend>
+  <depend>geometry_msgs</depend>
+  <depend>actionlib_msgs</depend>
+  <depend>rviz_common</depend>
+  <depend>std_msgs</depend>
+  <depend>pluginlib</depend>
+
+  <exec_depend>libqt5-core</exec_depend>
+  <exec_depend>libqt5-gui</exec_depend>
+  <exec_depend>libqt5-opengl</exec_depend>
+  <exec_depend>libqt5-widgets</exec_depend>
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
